--- a/NLayer.API/appsettings.json
+++ b/NLayer.API/appsettings.json
@@ -1,4 +1,5 @@
 {
+    "ConnectionStrings": { "SqlConnection": "Data Source=DESKTOP-V1LH47A\\SQLEXPRESS;Initial Catalog=UdemyNLayerDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
